crates/webtau-macros/tests/compile-fail/no_params.rs
#[webtau_macros::command]
fn tick() -> i32 {
    42
}

fn main() {}
