crates/webtau-macros/tests/compile-fail/no_params.stderr
error: #[command] requires at least one parameter: `state: &T` or `state: &mut T`
 --> tests/compile-fail/no_params.rs:2:4
  |
2 | fn tick() -> i32 {
  |    ^^^^
